vmTestbase/vm/mlvm/indy/func/jvmti/mergeCP_none2indy_b/TestDescription.java timed out

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 12
    • Affects Version/s: 12
    • Component/s: hotspot
    • b07

      - IndyRedefineClass.c, 60: Setting redefined class name to vm/mlvm/indy/func/jvmti/mergeCP_none2indy_b/INDIFY_Dummy0
      - IndyRedefineClass.c, 54: Setting redefine trigger method name to redefineNow
      - IndyRedefineClass.c, 132: Entering redefine tigger method: Lvm/mlvm/indy/func/jvmti/mergeCP_none2indy_b/INDIFY_Dummy0;.redefineNow
      - IndyRedefineClass.c, 140: Redefining class vm/mlvm/indy/func/jvmti/mergeCP_none2indy_b/INDIFY_Dummy0
      # info :: File = ./bin/newclass/vm/mlvm/indy/func/jvmti/mergeCP_none2indy_b/INDIFY_Dummy0.class
      # info **Agent:: opening file ./bin/newclass/vm/mlvm/indy/func/jvmti/mergeCP_none2indy_b/INDIFY_Dummy0.class
      # info file size= 3128
       File red completely
      - IndyRedefineClass.c, 94: Enabling single step
      - IndyRedefineClass.c, 103: Forcing early return
      - IndyRedefineClass.c, 168: Single step event: Lvm/mlvm/indy/func/jvmti/mergeCP_none2indy_b/INDIFY_Dummy0; .target :3
      - IndyRedefineClass.c, 94: Enabling single step
      - IndyRedefineClass.c, 99: Popping a frame
      - IndyRedefineClass.c, 168: Single step event: Lvm/mlvm/indy/func/jvmti/mergeCP_none2indy_b/INDIFY_Dummy0; .invokeTarget0 :12
      - IndyRedefineClass.c, 88: Disabling single step
      Timeout refired 1200 times

            Assignee:
            Coleen Phillimore
            Reporter:
            Mikael Vidstedt
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: