8209447: vmTestbase/vm/mlvm/indy/func/jvmti/mergeCP_none2indy_b/TestDescription.java timed out

Was walking code cache for every safepoint because redefined methods take a long time to clear out of the code cache

Reviewed-by: eosterlund, rehn